force-app/main/default/objects/PricebookEntry/fields/Dealer_Price__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Price__c</fullName>
    <label>Dealer Price (INR/Unit)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>