force-app/main/default/objects/PricebookEntry/fields/Effective_Customer_Price_with_Tax__c.field-meta.xml
<CustomField>
    <fullName>Effective_Customer_Price_with_Tax__c</fullName>
    <label>Effective Customer Price with Tax (INR)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>