force-app/main/default/objects/PricebookEntry/fields/Max_Discount_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Max_Discount_Percentage__c</fullName>
    <label>Max Discount</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>