force-app/main/default/objects/PricebookEntry/fields/Max_Retail_Price__c.field-meta.xml
<CustomField>
    <fullName>Max_Retail_Price__c</fullName>
    <label>Max Retail Price (INR/Unit)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>