force-app/main/default/objects/PricebookEntry/fields/Volume__c.field-meta.xml
<CustomField>
    <fullName>Volume__c</fullName>
    <label>Volume</label>
    <length>100</length>
    <type>Text</type>
</CustomField>